--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 ---
 layout: default
 ---
-<div class="home">
-
-{{site.arabic.title}}
-  {% for problem in site.arabic %}
-    <h2>{{ problem.title }}</h2>
-      {% for folder in problem.folders %}
-          <h3>{{folder}}</h3>
-      {% endfor %}
-  {% endfor %}
-
-
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Welcome to Tameez</h1>
+    <p class="lead">Teach your ear to distinguish Arabic sounds with instant feedback.<br/>Press one of the letters on the top to get started.
+  </div>
 </div>
