--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 ---
 layout: default
+syntax: kramdown
 ---
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">Welcome to Tameez</h1>
-    <p class="lead">Teach your ear to distinguish Arabic sounds with instant feedback.<br/>Press one of the letters on the top to get started.
-  </div>
-</div>
+
+
+<h1>Welcome to Tameez</h1><br/>
+<p class="lead">Teach your ear to distinguish Arabic sounds with instant feedback. Press one of the links below to get started:</p><br/>
+
+{% for node in site.arabic %}
+  {% assign counter = 0 %}
+  {% for word in node.words %}
+      {% assign counter = counter | plus: word.pronounciations.size %}
+  {% endfor %}
+<a href="{{node.url | prepend: site.baseurl }}"><h3>{{node.title}} <span class="label label-default">{{counter}}</span></h3></a>
+{% endfor %}
+<br/>
+<p><i>(The grey field shows the number of available unique pronounciations.)</i></p>
