format front page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ syntax: kramdown
 ---
 
 <h1>Welcome to Tameez</h1>
-<p class="lead">Teach your ear to distinguish Arabic sounds with instant feedback. Press one of the links below to get started:</p>
+<p class="lead">Teach your ear to distinguish Arabic sounds with instant feedback.<br/>Press one of the links below to get started:</p>
 
 <div class="list-group">
   {% for node in site.arabic %}
