new files and cleanups

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ syntax: kramdown
     {% endfor %}
   <a href="{{node.url | prepend: site.baseurl }}" class="list-group-item">
     <h3 class="list-group-item-heading">{{node.title}}</h3>
-    <p class="list-group-item-text text-muted">{{counter}} sounds available.</p>
+    <p class="list-group-item-text text-muted">{{counter}} sounds available</p>
   </a>
 {% endfor %}
 </div>
